--- a/index.ipynb
+++ b/index.ipynb
@@ -104,7 +104,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "friends = {'name': 'Friends', 'genre': 'sitcom', 'no_of_seasons': 10}"
+    "friends = {'name': 'Friends',\n",
+    "           \n",
+    "'genre': 'sitcom', 'no_of_seasons': 10}"
    ]
   },
   {
@@ -721,7 +723,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
